--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 NEXT VERSION
 
+V1.2.1 - 2012-09-24
+Bug fix(es):
+- (DSLCPE_SW-645) [VRX200] Reboot command results in system hang
+  Added signal handling for active polling thread.
+
 V1.2.0 - 2012-01-20
 new configuration option(s) added:
  + --enable-pci-slave=yes | no
