Update the version numbers in the files that were copied from 1.2.1.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,8 @@
 NEXT VERSION
 
+V1.4.1 - Unknown
+-
+
 V1.2.1 - 2012-09-24
 Bug fix(es):
 - (DSLCPE_SW-645) [VRX200] Reboot command results in system hang
