--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,80 @@
 NEXT VERSION
 
+V1.4.8.4 - 2014-03-11
+common:
+- VRX (DSLCPE_SW-788) Rework implementation for LIF detection of the GPIO handling
+  + excluded common GPIO framework added with DSLCPE_SW-705
+
+V1.4.8.3 - 2014-02-27
+common:
+- (DSLCPE_SW-785) Extend interface between DSL and PP subsystem to use line number.
+  + extended parameters list of showtime enter/exit/check functions.
+
+V1.4.8.2 - 2014-02-10
+common:
+- VRX (DSLCPE_SW-770) Klocwork reworks/fixes for UGW-6.1
+
+V1.4.8.1 - 2014-01-23
+common:
+- Removed line number from DSL/PP interface in case of bonding
+
+V1.4.8 - 2014-01-10
+common:
+- Updated copyright header (year 2014)
+
+V1.4.7 - 2014-01-09
+common:
+- VRX (DSLCPE_SW-762) Extend VDSL MEI driver with device tree support
+  + Extended source files according to the CRDSLCPESW-40 review.
+  + Excluded MEI_SUPPORT_DEVICE_VRx (VR9/VR10) macro for platform handling.
+  + Added run time platform handling based at device tree files configuration.
+
+V1.4.6 - 2013-12-20
+common:
+-VRX (DSLCPE_SW-753) Take care that DSL Subsystem is fully functional with
+ Linux kernel 3.10
+  + Fixed DFE module enabling
+  + Fixed irq handling for VR10
+- VRX (DSLCPE_SW-646) VDSL MEI driver should be usable as loadable module.
+  + Fixed build issues (external ppa driver names), use ppa driver callback
+    functions.
+  + Supported module unload.
+- VRX Updated license type ("Dual BSD/GPL" -> "GPL").
+- VRX (DSLCPE_SW-705) Add GPIO configuration for LIF detection handling in case
+  of AnnexB FW
+  + linux general gpio framework for 3.10
+- VRX (DSLCPE_SW-762) Extend VDSL MEI driver with device tree support
+  + Extended handling for VR9 & VR10 for kernel 3.10 & device tree
+
+V1.4.5 - 2013-09-23
+common:
+-VRX (DSLCPE_SW-753) Take care that DSL Subsystem is fully functional with
+ Linux kernel 3.10
+
+V1.4.4 - 2013-09-13
+common:
+- VRX (DSLCPE_SW-723) Rework the VDSL MEI driver to optimize the BAR register usage.
+  Updated source files according to the CRDSLCPESW-21 review.
+Bug fix(es):
+- VRX (DSLCPE_SW-737) Switching FW from (i/f-Rev-0 + FML-Type-0) to
+  (i/f-Rev-1 + FML-Type-1) has problems.
+  + Fixed BAR registers handling for ERB block.
+- VRX ([DSLCPE_SW-678) API for FW R6 Release - Handling for new FW application type
+  (which supports G.Vector).
+  + Fixed MEI driver test application XDSL moded check (-e option).
+
+V1.4.3 - 2013-08-22
+Bug fix(es):
+- VRX (DSLCPE_SW-734) Take care that DSLSubsystem is fully functional with
+  Linux kernel 3.8
+  + Fixed wrong ioctl handler parameters list caused segmentation fault.
+
+V1.4.2 - 2013-08-09
+common:
+- VRX (DSLCPE_SW-734) Take care that DSLSubsystem is fully functional with
+  Linux kernel 3.8
+  + Extended source code to be compilable with linux kernel 3.8
+
 V1.4.1 - 2013-07-29
 common:
 - VRX (DSLCPE_SW-742) Change default configuration for DSM (vectoring) feature
